<resources>

    <!--MapsActivity-->
    <string name="app_name">Solar Calculator</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_access_error">Location access denied!</string>
    <string name="location_search_failure">Failed to find location</string>
    <string name="search_location">Search Location Here…</string>
    <string name="all_times_in_utc">(All times in GMT +0)</string>
    <string name="loc_already_saved">Location already saved!</string>
    <string name="loc_saved">Location saved</string>

    <!--Content Descriptions-->
    <string name="map_marker">Map marker</string>
    <string name="gps_icon">GPS Icon</string>
    <string name="sunset_icon">Sunset icon</string>
    <string name="sunrise_icon">Sunrise icon</string>
    <string name="moon_icon">moon_icon</string>
    <string name="moonrise_icon">Moonrise icon</string>
    <string name="moonset_icon">Moonset icon</string>
    <string name="save_current_location">Save Current Location</string>
    <string name="show_saved_locations">Show Saved Locations</string>
    <string name="previous_day">Previous Day</string>
    <string name="reset">Reset</string>
    <string name="next_day">Next Day</string>


</resources>
