<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="10dp">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/search_location"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="16dp"
            android:singleLine="true" />

    </android.support.v7.widget.CardView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MapsActivity" />

    <ImageView
        android:id="@+id/image_map_marker"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/map_marker"
        android:paddingBottom="24dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_map_marker" />

    <ImageView
        android:id="@+id/image_gps"
        style="@style/MyBorderlessButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@id/bottom_layout"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/gps_icon"
        android:src="@drawable/ic_gps_fixed" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7.5">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:src="@drawable/ic_sun" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sunrise_icon"
                android:src="@drawable/ic_arrow_upward"
                android:tint="@color/amber" />

            <TextView
                android:id="@+id/tv_sunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sunset_icon"
                android:rotation="180"
                android:src="@drawable/ic_arrow_upward"
                android:tint="@color/amber" />

            <TextView
                android:id="@+id/tv_sunset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="7.5">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:contentDescription="@string/moon_icon"
                android:src="@drawable/ic_moon" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/moonrise_icon"
                android:src="@drawable/ic_arrow_upward"
                android:tint="@color/lightBlue" />

            <TextView
                android:id="@+id/tv_moon_rise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/moonset_icon"
                android:rotation="180"
                android:src="@drawable/ic_arrow_upward"
                android:tint="@color/lightBlue" />

            <TextView
                android:id="@+id/tv_moon_set"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/all_times_in_utc"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/image_previous_date"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:rotation="180"
                android:src="@drawable/ic_play_arrow" />

            <ImageView
                android:id="@+id/image_reset_date"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/ic_replay" />

            <ImageView
                android:id="@+id/image_next_date"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/ic_play_arrow" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
